# xrobo_ws

./: .gitattributes  README.md  mono_crash.9fc1258c0.0.json
.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Assets/: msgbrowser_settings.asset
Assets/Adaptive Performance/: AdaptivePerformanceGeneralSettings.asset
Assets/Animations/: ButtonAnimation.controller
Assets/Fonts/: SF TransRobotics Italic SDF.asset
Assets/Materials/: Ball.mat  EnermyColor.mat  RobotCamera.renderTexture  RobotColor.mat
Assets/PhysicsMaterials/: BouncyRobot.physicMaterial
Assets/Prefabs/: Basketball.prefab  RoboconField.prefab  Robot.prefab
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scenes/: GameScene.unity  LaunchScene.unity  RosGameScene.unity  SimpleScene.unity
Assets/Scripts/: BasketballController.cs  CameraNode.cs  CameraSensor.cs  EnemyBotController.cs  HoopController.cs  LaunchProjectile.cs  LidarNode.cs  LidarSensor.cs  RobotController.cs  RobotNode.cs  ScoreCounter.cs  TimerCounter.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectSettings.asset.private.0  QualitySettings.asset
object_detection/: package.xml  setup.py
object_detection/object_detection/: ros2_yolo.py
robocon_bringup/: CMakeLists.txt  package.xml  setup.py
robocon_bringup/config/: rviz2.rviz
robocon_bringup/launch/: unity_sim.launch.py
robocon_bringup/robocon_bringup/: odom_tf2.py
robocon_camera/: CMakeLists.txt  package.xml
robocon_camera/include/robocon_camera/: example-utils.hpp
robocon_camera/launch/: demo_t265.launch.py
robocon_camera/src/: rs-motion.cpp  rs_d455_node.cpp  rs_imu.cpp  rs_t265_node.cpp  web_cam.cpp
robocon_desktop/: CMakeLists.txt  README.md
robocon_desktop/build-robocon_gui-Desktop-Debug/: CMakeCache.txt.prev  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  robocon_desktop
robocon_desktop/build-robocon_gui-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-9e55dd6425b4d982e209.json  directory-.-Debug-c4f1a41915e0da4435f4.json  index-2025-04-27T07-11-00-0156.json  target-robocon_desktop-Debug-f0354d4e6aec314bc1b1.json  target-robocon_desktop_uninstall-Debug-2d0243a2f5ececed4df3.json
robocon_desktop/build-robocon_gui-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-d00787c53132d92a039d.json  cmakeFiles-v1-fdb008babb6212af66ce.json  codemodel-v2-7ac19c11deef4f2e8f2a.json  directory-.-Debug-e3e0903b903ce30ee45e.json  index-2025-04-27T06-39-03-0478.json  target-robocon_desktop-Debug-c3c77fe8c71fdfae98f2.json  target-robocon_desktop_autogen-Debug-d892a4be2e78442a474e.json  target-uninstall-Debug-8ffae99187f674b49e95.json
robocon_desktop/build-robocon_gui-Desktop-Debug/ament_cmake_core/: package.cmake  robocon_desktopConfig.cmake
robocon_desktop/build-robocon_gui-Desktop-Debug/ament_cmake_core/stamps/: package.xml.stamp
robocon_desktop/build-robocon_gui-Desktop-Debug/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
robocon_desktop/build-robocon_gui-Desktop-Debug/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: robocon_desktop
robocon_desktop/build-robocon_gui-Desktop-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
robocon_desktop/build-robocon_gui-Desktop-Debug/robocon_desktop_autogen/: mocs_compilation.cpp
robocon_desktop/build-robocon_gui-Desktop-Debug/robocon_desktop_autogen/2QIST5AW46/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
robocon_desktop/build-robocon_gui-Desktop-Debug/robocon_desktop_autogen/ui/: ui_mainwindow.h
robocon_desktop/include/robocon_desktop/: mainwindow.h
robocon_desktop/robocon_gui/: CMakeLists.txt
robocon_desktop/src/: main.cpp  mainwindow.cpp  robocon_desktop.cpp
robocon_desktop/ui/: mainwindow.ui
robocon_detector/: CMakeLists.txt  package.xml
robocon_detector/model/yolov8s_openvino_model/: yolov8s.xml
robocon_detector/src/: distance_estimation.cpp  inference.cc  openvino_node.cpp
robocon_detector/src/object_detection/: inference.cc  object_detection.cpp  web_cam.cpp
robocon_msgs/: CMakeLists.txt  package.xml
robocon_nav/: package.xml  setup.py
robocon_nav/robocon_nav/: robot_navigator.py  test.ipynb
robocon_node/: CMakeLists.txt  README.md  package.xml
robocon_node/include/robocon_node/object_detection/: inference.h
robocon_node/model/yolov8s_openvino_model/: metadata.yaml
robocon_node/src/: robocon_node.cpp
robocon_node/src/object_detection/: inference.cc  object_detection.cpp
robocon_serial/: CMakeLists.txt  README.md  package.xml
robocon_serial/include/robocon_serial/: Command.h  SerialComHex.h
robocon_serial/src/: Command.cpp  SerialComHex.cpp  robocon_serial.cpp  robocon_serialcomhex.cpp
robocon_teleop/: CMakeLists.txt  package.xml
robocon_teleop/src/: teleop_keyboard.cpp
